syntax = "proto3";

package pkg.proto.order.item.message;
option go_package = "github.com/gomaglev/protos/pkg/proto/order/item/message;message";

import "google/protobuf/timestamp.proto";
import "pkg/proto/common/common.proto";

// OrderItemMessage
message OrderItemMessage {
    // @inject_tag: faker:"uuid_hyphenated"
    string id = 1;
    // @inject_tag: faker:"paragraph"
    string message = 2;
    // @inject_tag: faker:"uuid_hyphenated"
    string item_id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message OrderItemMessages {
    repeated OrderItemMessage list = 1;
    common.PaginationResult pagination = 2;
}
